WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252904
Performance regression on selector match benchmark (add UNLIKELY to help branch prediction)
https://bugs.webkit.org/show_bug.cgi?id=252904
Summary
Performance regression on selector match benchmark (add UNLIKELY to help bran...
Matthieu Dubet
Reported
2023-02-24 07:36:40 PST
The introduction of css-nesting (original VS resolved selector list) has introduced a small performance regression on selector matching benchmark.
https://perf.webkit.org/v3/#/charts?since=1663309346443&paneList=((22-1649-null-null-(5-2.5-500
))) Adding a UNLIKELY to help the compiler mitigate the performance decrease in the most frequent case (no nesting) could help.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-24 07:37:10 PST
<
rdar://problem/105883716
>
Matthieu Dubet
Comment 2
2023-02-24 14:03:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10665
Matthieu Dubet
Comment 3
2023-03-17 08:43:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11656
EWS
Comment 4
2023-03-17 14:59:52 PDT
Committed
261809@main
(29a558295527): <
https://commits.webkit.org/261809@main
> Reviewed commits have been landed. Closing PR #11656 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug