Add UNLIKELY tag to help branch prediction for selector matching https://bugs.webkit.org/show_bug.cgi?id=252904 rdar://105883716

Reviewed by NOBODY (OOPS!).

CSS Nesting is still rare, we should optimize for the most
frequent case (no nesting).
It should help with a performance regression introduced by nesting in
the selector matching benchmark.

* Source/WebCore/css/StyleRule.cpp:
(WebCore::StyleRule::resolvedSelectorList const):